[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.8.2",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "email-validator>=2.2.0",
    "environs>=14.1.1",
    "fastapi>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "tomli-w>=1.2.0",
    "tomlkit>=0.13.2",
    "tortoise-orm>=0.24.2",
    "uvicorn>=0.34.0",
]

[tool.aerich]
tortoise_orm = "app.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
